--- a/docs/contents/development/ci-cd/continuous-integration.mdx
+++ b/docs/contents/development/ci-cd/continuous-integration.mdx
@@ -21,7 +21,7 @@ Our CI workflow (`ci.yaml`) is triggered on:
 - **Pull requests to master**: Excluding branches with "e2e" in their name
 - Only when specific paths are modified:
   - GitHub Actions workflow files
-  - Python source code (`clickup_mcp/**/*.py`)
+  - Python source code (`slack_mcp/**/*.py`)
   - Test files (`test/**/*.py`)
   - Test configuration files (`.coveragerc`, `pytest.ini`, etc.)
   - Project configuration (`pyproject.toml`, `uv.lock`)
