✏️ Adjust the project naming to be correct in document.

--- a/docs/contents/development/ci-cd/continuous-integration.mdx
+++ b/docs/contents/development/ci-cd/continuous-integration.mdx
@@ -6,7 +6,7 @@ sidebar_position: 1
 
 # Continuous Integration
 
-This document covers the Continuous Integration (CI) workflows used to maintain code quality and ensure tests pass in the ClickUp MCP Server project.
+This document covers the Continuous Integration (CI) workflows used to maintain code quality and ensure tests pass in the Slack MCP Server project.
 
 ## Status Badges
 
@@ -54,7 +54,7 @@ The CI process uses several reusable workflows to streamline the execution:
 For each test type (unit, integration, E2E, contract), the workflow:
 - Organizes and processes test coverage data
 - Uploads reports to Codecov with specific flags
-- Labels reports with the package name (`clickup_mcp`)
+- Labels reports with the package name (`slack_mcp`)
 
 ### 3. Code Quality Checks
 
