--- a/docs/contents/development/coding-style.mdx
+++ b/docs/contents/development/coding-style.mdx
@@ -221,8 +221,8 @@ from typing import Dict, List, Optional
 import httpx
 from pydantic import BaseModel, Field
 
-from clickup_mcp_server.models import ClickUpTask
-from clickup_mcp_server.utils import logger
+from slack_mcp_server.models import ClickUpTask
+from slack_mcp_server.utils import logger
 ```
 
 ### File and Directory Structure
