--- a/docs/contents/development/ci-cd/index.mdx
+++ b/docs/contents/development/ci-cd/index.mdx
@@ -5,7 +5,7 @@ sidebar_position: 6
 
 # CI/CD Workflows
 
-This section describes the Continuous Integration and Continuous Deployment (CI/CD) workflows used in the ClickUp MCP Server project.
+This section describes the Continuous Integration and Continuous Deployment (CI/CD) workflows used in the Slack MCP Server project.
 
 ## 🚀 **Quick Navigation**
 
