--- a/docs/contents/development/requirements.mdx
+++ b/docs/contents/development/requirements.mdx
@@ -11,7 +11,7 @@ import TabItem from '@theme/TabItem';
 
 # Development Requirements
 
-Before you begin contributing to ClickUp MCP Server, ensure your development environment meets these requirements.
+Before you begin contributing to Slack MCP Server, ensure your development environment meets these requirements.
 
 ## Software Prerequisites
 
