--- a/docs/src/pages/versions.mdx
+++ b/docs/src/pages/versions.mdx
@@ -1,6 +1,6 @@
 ---
 title: All Documentation Versions
-description: Overview of all documentation versions for ClickUp MCP Server
+description: Overview of all documentation versions for Slack MCP Server
 hide_table_of_contents: true
 ---
 
