✏️ Just the content to be correct or reasonable.

--- a/docs/contents/development/ci-cd/additional-ci-workflows.mdx
+++ b/docs/contents/development/ci-cd/additional-ci-workflows.mdx
@@ -5,13 +5,13 @@ sidebar_position: 6
 
 # Additional CI Workflows
 
-This document covers the specialized CI workflows that support specific aspects of the ClickUp MCP Server project beyond the main continuous integration and release processes.
+This document covers the specialized CI workflows that support specific aspects of the Slack MCP Server project beyond the main continuous integration and release processes.
 
 ## Overview
 
 The project includes several specialized CI workflows that handle specific operational tasks:
 
-- **🔍 API Specification Checking** - Automated monitoring of ClickUp API changes
+- **🔍 API Specification Checking** - Automated monitoring of Slack API changes
 - **🐳 Docker CI** - Container image building and testing
 - **📋 DockerHub README CI** - Repository description synchronization
 - **🤖 Documentation Auto-Approve & Auto-Merge** - Streamlined docs updates
