--- a/docs/contents/development/requirements.mdx
+++ b/docs/contents/development/requirements.mdx
@@ -59,8 +59,8 @@ The project has several dependencies that will be installed automatically when y
      </TabItem>
      <TabItem value="conda" label="conda">
      ```bash
-     conda create -n clickup-mcp python=3.13
-     conda activate clickup-mcp
+     conda create -n slack-mcp python=3.13
+     conda activate slack-mcp
      ```
 
      </TabItem>
@@ -128,7 +128,7 @@ The project has several dependencies that will be installed automatically when y
 5. **Create a `.env` file for local development**:
    ```bash
    cp .env.example .env
-   # Edit .env with your ClickUp API token
+   # Edit .env with your Slack API token
    ```
 
 ## Next Steps
