--- a/docs/contents/development/ci-cd/index.mdx
+++ b/docs/contents/development/ci-cd/index.mdx
@@ -47,7 +47,7 @@ Our CI/CD system is organized into focused, developer-friendly sections:
 - **Standardized operations and DRY principles**
 
 ### **⚙️ [Additional CI Workflows](./additional-ci-workflows)**
-- **API Specification Checking** - Automated ClickUp API monitoring
+- **API Specification Checking** - Automated Slack API monitoring
 - **Docker CI** - Container building and testing workflows  
 - **DockerHub README CI** - Repository description synchronization
 - **Documentation Auto-Approve & Auto-Merge** - Streamlined docs updates
