--- a/docs/contents/development/index.mdx
+++ b/docs/contents/development/index.mdx
@@ -20,7 +20,7 @@ If you're new to the project, we recommend starting with these sections:
 
 Once you're familiar with the basics, you can explore:
 
-- [Software Architecture](./architecture.mdx) - Overview of the project architecture
+- [Software Architecture](./architecture/) - Overview of the project architecture
 - [CI/CD Workflows](./ci-cd/index.mdx) - Continuous Integration and Deployment processes
 
 ## Contributing
