--- a/docs/contents/document/api-references/webhook-apis/server-configuration.mdx
+++ b/docs/contents/document/api-references/webhook-apis/server-configuration.mdx
@@ -311,56 +311,20 @@ except Exception as e:
 "
 ```
 
-## Performance Configuration
+## Queue Backend Environment Variables
 
-### Server Performance Options
-
-#### ASGI Server Configuration
-
-For production deployments, consider using Gunicorn with Uvicorn workers:
-
-```bash
-# Install Gunicorn
-pip install gunicorn[uvloop]
-
-# Run with Gunicorn
-gunicorn slack_mcp.webhook.server:create_slack_app \
-  --bind 0.0.0.0:8080 \
-  --worker-class uvicorn.workers.UvicornWorker \
-  --workers 4 \
-  --worker-connections 1000 \
-  --max-requests 1000 \
-  --max-requests-jitter 50 \
-  --timeout 30 \
-  --keepalive 2
-```
-
-#### Memory and Resource Configuration
-
-```bash
-# Set memory limits (Docker/Kubernetes)
-export MEMORY_LIMIT="512Mi"
-export CPU_LIMIT="500m"
-
-# Configure garbage collection
-export PYTHONOPTIMIZE=1
-export PYTHONUNBUFFERED=1
-```
-
-### Queue Backend Configuration
-
-#### Redis Configuration
+### Redis Backend Configuration
 
 ```bash
 # Redis connection settings
+export QUEUE_BACKEND_TYPE="redis"
 export REDIS_URL="redis://localhost:6379/0"
 export REDIS_MAX_CONNECTIONS=20
 export REDIS_RETRY_ON_TIMEOUT=true
 export REDIS_SOCKET_KEEPALIVE=true
-export REDIS_SOCKET_KEEPALIVE_OPTIONS={}
 ```
 
-#### In-Memory Queue Configuration
+### In-Memory Backend Configuration
 
 ```bash
 # For development/testing only
@@ -368,247 +332,8 @@ export QUEUE_BACKEND_TYPE="memory"
 export MEMORY_QUEUE_MAX_SIZE=1000
 ```
 
-## Deployment Configurations
+**For deployment patterns, performance optimization, and architectural details, see [Webhook Server Architecture](/dev/next/architecture/webhook-server-architecture).**
 
-### Docker Configuration
-
-#### Dockerfile
-
-```dockerfile
-FROM python:3.11-slim
-
-# Set working directory
-WORKDIR /app
-
-# Install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy application code
-COPY . .
-
-# Set environment variables
-ENV PYTHONPATH=/app
-ENV PYTHONUNBUFFERED=1
-
-# Expose port
-EXPOSE 8080
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:8080/health || exit 1
-
-# Run the application
-CMD ["python", "-m", "slack_mcp.webhook", "--host", "0.0.0.0", "--port", "8080"]
-```
-
-#### Docker Compose
-
-```yaml
-version: '3.8'
-
-services:
-  webhook:
-    build: .
-    ports:
-      - "8080:8080"
-    environment:
-      - SLACK_SIGNING_SECRET=${SLACK_SIGNING_SECRET}
-      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
-      - REDIS_URL=redis://redis:6379/0
-      - LOG_LEVEL=INFO
-    depends_on:
-      - redis
-    restart: unless-stopped
-
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    restart: unless-stopped
-```
-
-### Kubernetes Configuration
-
-#### Deployment
-
-```yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: slack-webhook
-spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: slack-webhook
-  template:
-    metadata:
-      labels:
-        app: slack-webhook
-    spec:
-      containers:
-      - name: webhook
-        image: slack-mcp-webhook:latest
-        ports:
-        - containerPort: 8080
-        env:
-        - name: SLACK_SIGNING_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: slack-secrets
-              key: signing-secret
-        - name: SLACK_BOT_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: slack-secrets
-              key: bot-token
-        - name: REDIS_URL
-          value: "redis://redis-service:6379/0"
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 30
-          periodSeconds: 30
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 5
-          periodSeconds: 10
-```
-
-#### Service
-
-```yaml
-apiVersion: v1
-kind: Service
-metadata:
-  name: slack-webhook-service
-spec:
-  selector:
-    app: slack-webhook
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
-  type: LoadBalancer
-```
-
-### Cloud Platform Configurations
-
-#### Heroku
-
-```bash
-# Procfile
-web: python -m slack_mcp.webhook --host 0.0.0.0 --port $PORT --no-env-file
-
-# Configure environment variables
-heroku config:set SLACK_SIGNING_SECRET="your_secret"
-heroku config:set SLACK_BOT_TOKEN="your_token"
-heroku config:set LOG_LEVEL="INFO"
-```
-
-#### AWS Lambda (with Mangum)
-
-```python
-# lambda_handler.py
-from mangum import Mangum
-from slack_mcp.webhook.server import create_slack_app
-
-app = create_slack_app()
-handler = Mangum(app)
-```
-
-#### Google Cloud Run
-
-```yaml
-# cloudbuild.yaml
-steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/slack-webhook', '.']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/slack-webhook']
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: gcloud
-  args:
-  - 'run'
-  - 'deploy'
-  - 'slack-webhook'
-  - '--image'
-  - 'gcr.io/$PROJECT_ID/slack-webhook'
-  - '--region'
-  - 'us-central1'
-  - '--allow-unauthenticated'
-```
-
-## Monitoring and Health Checks
-
-### Health Check Endpoint
-
-Add a custom health check endpoint:
-
-```python
-from slack_mcp.webhook.server import create_slack_app
-
-app = create_slack_app()
-
-@app.get("/health")
-async def health_check():
-    """Health check endpoint for load balancers."""
-    return {
-        "status": "healthy",
-        "timestamp": time.time(),
-        "version": "1.0.0"
-    }
-
-@app.get("/readiness")
-async def readiness_check():
-    """Readiness check for Kubernetes."""
-    # Check dependencies (queue backend, Slack API, etc.)
-    try:
-        backend = get_queue_backend()
-        # Test queue connection
-        return {"status": "ready"}
-    except Exception as e:
-        raise HTTPException(status_code=503, detail=f"Not ready: {e}")
-```
-
-### Metrics and Logging
-
-```python
-import logging
-import time
-from prometheus_client import Counter, Histogram, generate_latest
-
-# Metrics
-request_count = Counter('webhook_requests_total', 'Total webhook requests')
-request_duration = Histogram('webhook_request_duration_seconds', 'Request duration')
-
-@app.middleware("http")
-async def metrics_middleware(request, call_next):
-    start_time = time.time()
-    
-    response = await call_next(request)
-    
-    request_count.inc()
-    request_duration.observe(time.time() - start_time)
-    
-    return response
-
-@app.get("/metrics")
-async def metrics():
-    """Prometheus metrics endpoint."""
-    return Response(generate_latest(), media_type="text/plain")
-```
 
 ## Troubleshooting Configuration Issues
 
