♻️ Rename the sections about server references content.

--- a/docs/contents/document/server-references/index.mdx
+++ b/docs/contents/document/server-references/index.mdx
@@ -8,12 +8,12 @@ sidebar_position: 3
 
 This section provides detailed documentation for all the server APIs and interfaces available in Slack MCP Server. The references are divided into three categories:
 
-1. **Web APIs** - RESTful endpoints for interacting with the server directly via HTTP
-2. **MCP Server APIs** - Programmatic interfaces for client libraries and applications  
-3. **Webhook Server APIs** - Event handling endpoints for Slack webhook integration
+1. **Web Server** - RESTful endpoints for interacting with the server directly via HTTP
+2. **MCP Server** - Programmatic interfaces for client libraries and applications  
+3. **Webhook Server** - Event handling endpoints for Slack webhook integration
 
 Choose a category below to explore the available server references:
 
-- [Web APIs](./web-apis/index.mdx) - HTTP-based RESTful APIs
-- [MCP Server APIs](./mcp-apis/index.mdx) - Client library interfaces
-- [Webhook Server APIs](./webhook-apis/index.mdx) - Slack event handling endpoints
+- [Web Server](./web-server/index.mdx) - HTTP-based RESTful APIs
+- [MCP Server](./mcp-server/index.mdx) - Client library interfaces
+- [Webhook Server](./webhook-server/index.mdx) - Slack event handling endpoints
