🍀 Adjust the sidebar settings and adjust the reference links for the migration of all the endpoint info into a new folder (as a section) under each server part.

--- a/docs/contents/document/server-references/mcp-server/index.mdx
+++ b/docs/contents/document/server-references/mcp-server/index.mdx
@@ -20,12 +20,12 @@ MCP Server supports three transport mechanisms:
 
 The following MCP tools are available for Slack integration:
 
-- ✅ [**Post Message**](./slack_post_message.mdx) - Send text messages to Slack channels
-- ✅ [**Read Channel Messages**](./slack_read_channel_messages.mdx) - Retrieve message history from channels
-- ✅ [**Read Thread Messages**](./slack_read_thread_messages.mdx) - Retrieve messages from specific threads
-- ✅ [**Thread Reply**](./slack_thread_reply.mdx) - Send replies to existing threads
-- ✅ [**Read Emojis**](./slack_read_emojis.mdx) - Get all available workspace emojis
-- ✅ [**Add Reactions**](./slack_add_reactions.mdx) - Add emoji reactions to messages
+- ✅ [**Post Message**](./end-points/slack_post_message.mdx) - Send text messages to Slack channels
+- ✅ [**Read Channel Messages**](./end-points/slack_read_channel_messages.mdx) - Retrieve message history from channels
+- ✅ [**Read Thread Messages**](./end-points/slack_read_thread_messages.mdx) - Retrieve messages from specific threads
+- ✅ [**Thread Reply**](./end-points/slack_thread_reply.mdx) - Send replies to existing threads
+- ✅ [**Read Emojis**](./end-points/slack_read_emojis.mdx) - Get all available workspace emojis
+- ✅ [**Add Reactions**](./end-points/slack_add_reactions.mdx) - Add emoji reactions to messages
 
 ## Tool Categories
 
