--- a/docs/contents/document/server-references/webhook-server/index.mdx
+++ b/docs/contents/document/server-references/webhook-server/index.mdx
@@ -24,7 +24,7 @@ The webhook server is built on FastAPI and provides secure, scalable handling of
 
 The webhook server exposes the following REST API endpoints:
 
-- ✅ [**POST /slack/events**](./slack-events-endpoint.mdx) - Main endpoint for receiving Slack events
+- ✅ [**POST /slack/events**](./end-points/slack-events-endpoint.mdx) - Main endpoint for receiving Slack events
 
 [//]: # (- ✅ [**URL Verification**]&#40;./url-verification.mdx&#41; - Automatic handling of Slack's challenge requests)
 
