--- a/docs/contents/document/server-references/web-server/index.mdx
+++ b/docs/contents/document/server-references/web-server/index.mdx
@@ -13,3 +13,9 @@ The server implements HTTP endpoints that enable:
 - **Server Monitoring**: Check server health and status
 - **System Integration**: Allow other services to interact with the server
 - **Standardized Responses**: Well-structured JSON responses and error handling
+
+## Available Endpoints
+
+Explore the available web server endpoints:
+
+- [Health Check](./end-points/health-check.mdx) - Server health monitoring endpoint
